// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PickerInput should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable root size-36 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body"
  >
    <input
      aria-haspopup={true}
      autoComplete="no"
      className="uui-input singleInput"
      onChange={[Function]}
      placeholder="Please select "
      readOnly={false}
      tabIndex={-1}
      type="text"
      value=""
    />
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled uui-icon-dropdown"
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;

exports[`PickerInput should be rendered correctly 2`] = `
<div
  className="container uui-input-box -clickable root size-48 mode-form"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  tabIndex={0}
>
  <div
    className="body multiline"
  >
    <button
      className="container uui-button-box uui-enabled root tag-color size-42 root"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
    <button
      className="container uui-button-box uui-enabled root tag-color size-42 root"
      href={null}
      onClick={[Function]}
      role="button"
      tabIndex={-1}
    >
      <div
        className="uui-caption"
      >
        A1
      </div>
      <div
        className="container uui-icon uui-enabled -clickable -clickable"
        onClick={[Function]}
        style={Object {}}
      >
        <SvgrURL
          className=""
        />
      </div>
    </button>
  </div>
  <div
    className="actions"
  >
    <div
      className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
      onClick={[Function]}
      style={Object {}}
      tabIndex={-1}
    >
      <SvgrURL
        className=""
      />
    </div>
    <div
      className="container uui-icon uui-enabled uui-icon-dropdown"
      style={Object {}}
    >
      <SvgrURL
        className=""
      />
    </div>
  </div>
</div>
`;
